app/assets/stylesheets/admin.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require 'error'

 *= require 'bootstrap_and_overrides'

 *= require_self
 *= require brands
 *= require shared/orders_for_admin
 *= require redactor-rails
 *= require chosen
  */

// Redactror Rails START
.redactor_box .redactor_redactor {
  height: 200px;
  width: 700px;
  color: #000 !important;
  text-shadow: none;
}
// Redactror Rails END

.clear {
  clear: both;
}

body {
  background-color : #FAFAFA;
}

strong {
  font-size   : 18px;
  font-weight : bold;
  line-height : 30px;
  margin-left : 10px;
}

.alert ul {
  margin: 0px;
}

.category_margin {
  margin-left : 100px;
}

.category_table {
  width : 800px;
}

.controls {
  margin-left : 200px !important;
}

.control-group label {
  margin-left : 28px;
}

.control-group .controls label {
  margin-left : 0px !important;
}

#category_new_perfume {
  margin-left : 30px;
}

table {
  table-layout : fixed !important;
}

table th, table td {
  overflow : hidden !important;
}

#box_of_perfume_show {
  margin-top : 10px;
}

#perfume_main_image {
  float : left;
}

#perfume_main_image img {
  border : 2px solid black;
  width  : 235px;
  height : 200px;
}

#description {
  float       : left;
  width       : 800px;
  margin-left : 10px;

  line-height : 24px;
  color       : #000;
  font-family : Georgia, Times, serif;
}

#perfume_title {
  font-size     : 24px;
  font-weight   : bold;
  color         : #323232;
  margin-left   : 100px;
  margin-bottom : 10px;

  a {
    text-decoration: none;
  }
}

.perfume_description {
  font-size   : 16px;
  margin-left : 20px;
}

.price_description {
  margin-top: -120px;
  margin-left: 20px;
}

.perfume_price{
  margin      : 5px 0 0 40px;
  font-size   : 16px;
  color       : #F00;
  float       : left;
  font-weight : bold;
  span {
    font-size : 25px;
    &.line-through {
      font-size : 16px;
    }
  }
}

#old_price {
  margin: 5px 0 0 20px;
  font-size   : 16px;
  color       : #4E4E4E;
  float       : left;
  font-weight : bold;
  span {
    font-size : 25px;
  }
}

.perfume_instock {
  float   : left;
  width   : 55px;
  height  : 55px;
  display : block;
}

.rank {
  color       : red;
  font-size   : 40px;
  font-weight : bold;
  margin-top  : 5px;
  font-family : Georgia, Times, serif;
}

#perfume_actions {
  text-align    : center;
  margin-bottom : 10px;
}

#text_area {
  width  : 500px;
  height : 150px;
}

.perfume_new_btn {
  margin-left : 30px;
}

#perfume_category {
  margin      : 5px 0 0 20px;
  font-size   : 16px;
  color       : #333;
  font-family : Georgia, Times, serif;
  text-shadow : 0 0 1px #777777;

  ul {
    margin    : 3px 0 3px 10px;
    font-size : 14px;
    li {
      line-height : 18px;
      i {
        margin-right: 5px;
        &.icon-th {
          margin-top: 3px;
          float: left;
        }
      }
    }
  }
}

#product_image {
  margin-top : 15px;
}

.custom_black_btn {
  margin-bottom : 10px;
}

//    ADMIN INDEX PAGE START

.progress_table {
  width  : 400px;
  float  : left;
  margin : 28px 0 0 30px;
  .progress {
    margin-bottom: 5px;
    height: 25px;
  }
}

.description_admin_index {
  float : left;
  width : 500px;
}

.table-condensed td, .table-condensed th {
  text-align : center;
}

.charlie {
  background-image : linear-gradient(to bottom, #daf6b5, #7cc817) !important;
}

.bravo {
  background-image : linear-gradient(to bottom, #ffad32, #cc7a00) !important;
}

.golf {
  background-image : linear-gradient(to bottom, #56c5eb, #1798c4) !important;
}

.november {
  background-image : linear-gradient(to bottom, #cdf3dd, #7adfa4) !important;
}

.juliet {
  background-image : linear-gradient(to bottom, #f5dc93, #eab823) !important;
}

.india {
  background-image : linear-gradient(to bottom, #ced9e8, #577eb1) !important;
}

.foxtrot {
  background-image : linear-gradient(to bottom, #fecccc, #fea3a3) !important;
}

//    ADMIN INDEX PAGE END

//    ADMIN PRODUCTS EDIT PAGE START
.control-label {
  padding-right : 10px;
}

//    ADMIN PRODUCTS EDIT PAGE END

.description_margin {
  margin-left: 40px;
  float: left;
  .btn {
    margin-top: 20px;
  }
}
.price_inputs {
  // margin-top: 40px;
}
.admin_product_price {
  width: 132px;
}
.small_icon_img {
  width: 70px;
}
.middle_icon_img {
  width: 100px;
}
.large_icon_img {
  width: 130px;
}
.iframe_video {
  width: 480px;
  height: 280px;
}
#products_parse {
  float: left;
  width: 500px;
}
.go_to_six_pm {
  float:left;
  margin-left: 100px;
}

